# thundergraph-model

./: CHANGELOG.md  PYPI.md  README.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: 01-bug_report.yml  02-feature_request.yml  03-documentation.yml  bug_report.md  documentation.md  feature_request.md
docs/: behavior_methodology.md  conceptual_requirements.md  execution_methodology.md  implementation_plan.md  logical_architecture.md  use_cases.md  v0_api.md
docs/generation_docs/: behavioral_projection_plan.md  brainstorm.md  evaluation_api_facade_implementation_plan.md  graph_compiler_nested_requirement_owner_fix_plan.md  implementation_plan.md  model_prototype_sketch.py  requirement_composition_and_naming_implementation_plan.md  system_authoring_restrictions_implementation_plan.md  v0_api.md
docs/release/: v1.2.0.md  v1.2.1.md
docs/user_docs/: IMPLEMENTATION_PLAN.md  README.md  conf.py  index.md
docs/user_docs/api/: api_analysis.rst  api_execution.rst  api_model.rst  api_root.rst
docs/user_docs/developer/: architecture.md  contributing.md  extension_playbook.md  releasing.md  repository_map.md  (+1 more)
examples/: __init__.py
examples/commercial_aircraft/: IMPLEMENTATION_PLAN.md  README.md  __init__.py
examples/hpc_datacenter/: README.md  __init__.py  program.py
examples/mars_ntp_tug/: __init__.py  tug_model.py
notebooks/: _gen_leo_notebook.py  aev_architecture.mmd  aev_thundergraph_demo.ipynb  autonomous_electric_vehicle.ipynb  cargo_jet_program.ipynb  hpc_datacenter_parameter_sweep.ipynb  leo_launch_vehicle_deep_stack.ipynb  mars_ntp_nuclear_tug.ipynb  sfr_architecture.md  sfr_architecture.mmd  sodium_fast_reactor_demo.ipynb
tests/integration/: test_commercial_aircraft_smoke.py  test_hpc_datacenter_smoke.py  test_mars_ntp_tug_smoke.py
tg_model/: __init__.py
tg_model/analysis/: __init__.py  _coherence.py  compare_variants.py  impact.py  sweep.py
tg_model/docs/: conceptual_requirements.md  execution_methodology.md  logical_architecture.md  v0_api.md
tg_model/execution/: __init__.py  behavior.py  configured_model.py  connection_bindings.py  dependency_graph.py  evaluation.py  evaluator.py  external_ops.py  graph_compiler.py  instances.py  requirements.py  rollups.py  run_context.py  solve_groups.py  stable_ids.py  validation.py  value_slots.py
tg_model/export/: __init__.py
tg_model/integrations/: __init__.py  external_compute.py
tg_model/model/: __init__.py  compile_types.py  definition_context.py  elements.py  evaluation_context.py  expr.py  identity.py  refs.py
(+201 files in other folders)
