[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "thundergraph-model"
version = "0.1.0"
description = "Executable systems modeling in Python"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "unitflow[numpy]>=0.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tg_model"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "scipy>=1.10.0",
    "numpy>=1.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tg_model --cov-report=term-missing"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "RUF"]

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true

# Pylance / Pyright: ``commercial_aircraft`` lives under ``examples/`` (same as runtime PYTHONPATH).
# The wheel still only ships ``tg_model``; this is analysis-only, not a packaged dependency.
[tool.pyright]
venvPath = "."
venv = ".venv"
extraPaths = ["examples"]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "mypy>=1.19.1",
    "nbconvert>=7.17.0",
    "numpy>=1.24.0",
    "pyright>=1.1.400",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.7",
    "scipy>=1.10.0",
]
docs = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
]
